--- a/what-we-do.html
+++ b/what-we-do.html
@@ -1,178 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <title>Cat Union-what we do</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-		type="text/css" />
-	<link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-		integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-	<title>Cat Union-what we do</title>
-</head>
-
-<body>
-	<div class="body-font">
-		<header>
-			<div class="wrapper-header">
-				<div class="container-fluid heading-navbar">
-					<div class="row">
-						<a class="col-lg-4 col-md-4 col-sm-4 col-4 logo" href="index.html">
-						</a>
-						<div class="col-lg-8 col-md-8 col-sm-8 col-8">
-							<div class="row bg-color-name-title"></div>
-							<div class="navigate-links">
-								<div class="row">
-									<nav class="navbar navbar-expand-lg navbar-light">
-										<a class="navbar-brand"></a>
-										<button
-                      class="navbar-toggler navbar-toggler-right visible-sm"
-                      type="button"
-                      data-toggle="collapse"
-                      data-target="#navbarNav"
-                      aria-controls="navbarNav"
-                      aria-expanded="false"
-                      aria-label="Toggle navigation"
-                    >
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-										<div class="collapse navbar-collapse" id="navbarNav">
-											<a class="nav-box nav-box-first col-lg-3" href="index.html">Home</a>
-
-											<a class="nav-box nav-box-second nav-box-active col-lg-3"
-												href="what-we-do.html">What we do</a>
-
-											<a class="nav-box nav-box-third col-lg-3" href="support-us.html">Support
-												us</a>
-
-											<a class="nav-box nav-box-fourth col-lg-3" href="pet-advice.html">Pet
-												Advice</a>
-										</div>
-									</nav>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="title-banner">
-				<h1 class="page-title">What we do</h1>
-			</div>
-		</header>
-
-		<section>
-			<div class="long-image">
-				<div class="upper-image"></div>
-				<div class="upper-statement">
-					<p>We give shelter to abandoned Cats and Kittens.</p>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<div class="long-image">
-				<div class="middle-image"></div>
-				<div class="middle-statement">
-					<p>We rehome Cats and Kittens into new loving homes.</p>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<div class="long-image">
-				<div class="lower-image"></div>
-				<div class="lower-statement">
-					<p>We make sure our Cats and Kittens receive excellent Vetinary care.</p>
-				</div>
-			</div>
-		</section>
-
-		<footer>
-			<div class="container-fluid footer-panel">
-				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-4 col-4 social-media">
-						<p>Follow us</p>
-						<a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-						<a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
-						<a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
-						<p>Help Today</p>
-						<button
-              type="button"
-              class="btn btn-primary button-color"
-              data-toggle="modal"
-              data-target="#exampleModal"
-            >
-              Donate
-            </button>
-					</div>
-
-					<div class="col-lg-4 col-md-4 col-sm-4 col-4 Location">
-						<p>Location</p>
-						<button
-              type="button"
-              class="btn btn-primary button-color"
-              data-toggle="modal"
-              data-target="#google-location-modal"
-            >
-              Map
-            </button>
-					</div>
-				</div>
-			</div>
-		</footer>
-
-		<div class="modal fade" id="google-location-modal" tabindex="-1" role="dialog" aria-labelledby="map-modal"
-			aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="map-modal">Find us</h5>
-						<button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-					</div>
-					<div class="modal-body">
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image"></div>
-							<div class="address-info">
-								<p>CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG</p>
-								<p>Telephone: 01632 960809</p>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button
-                type="button"
-                class="btn btn-secondary"
-                data-dismiss="modal"
+  <body>
+    <div class="body-font">
+      <header>
+        <div class="wrapper-header">
+          <div class="container-fluid heading-navbar">
+            <div class="row">
+              <a
+                class="col-lg-4 col-md-4 col-sm-4 col-4 logo"
+                href="index.html"
               >
-                Close
-              </button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-    
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-</body>
+              </a>
+              <div class="col-lg-8 col-md-8 col-sm-8 col-8">
+                <div class="row bg-color-name-title"></div>
+                <div class="navigate-links">
+                  <div class="row">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                      <a class="navbar-brand"></a>
+                      <button
+                        class="navbar-toggler navbar-toggler-right visible-sm"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbarNav"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                      >
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <a
+                          class="nav-box nav-box-first col-lg-3"
+                          href="index.html"
+                          >Home</a
+                        >
 
+                        <a
+                          class="nav-box nav-box-second nav-box-active col-lg-3"
+                          href="what-we-do.html"
+                          >What we do</a
+                        >
+
+                        <a
+                          class="nav-box nav-box-third col-lg-3"
+                          href="support-us.html"
+                          >Support us</a
+                        >
+
+                        <a
+                          class="nav-box nav-box-fourth col-lg-3"
+                          href="pet-advice.html"
+                          >Pet Advice</a
+                        >
+                      </div>
+                    </nav>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="title-banner">
+          <h1 class="page-title">What we do</h1>
+        </div>
+      </header>
+
+      <section>
+        <div class="long-image">
+          <div class="upper-image"></div>
+          <div class="upper-statement">
+            <p>We give shelter to abandoned Cats and Kittens.</p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="long-image">
+          <div class="middle-image"></div>
+          <div class="middle-statement">
+            <p>We rehome Cats and Kittens into new loving homes.</p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="long-image">
+          <div class="lower-image"></div>
+          <div class="lower-statement">
+            <p>
+              We make sure our Cats and Kittens receive excellent Vetinary care.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <div class="container-fluid footer-panel">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4 social-media">
+              <p>Follow us</p>
+              <a href="http://www.facebook.com" target="_blank"
+                ><i class="fab fa-facebook-square"></i
+              ></a>
+              <a href="http://www.twitter.com" target="_blank"
+                ><i class="fab fa-twitter-square"></i
+              ></a>
+              <a href="http://www.instagram.com" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
+              <p>Help Today</p>
+              <a href="support-us.html#donate"
+                ><button
+                  type="button"
+                  class="btn btn-secondary button-color"
+                  data-toggle="modal"
+                >
+                  Donate
+                </button></a
+              >
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4 Location">
+              <p>Location</p>
+              <button
+                type="button"
+                class="btn btn-secondary button-color"
+                data-toggle="modal"
+                data-target="#google-location-modal"
+              >
+                Map
+              </button>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+      <div
+        class="modal fade"
+        id="google-location-modal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="map-modal"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="map-modal">Find us</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div
+                  class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image"
+                ></div>
+                <div class="address-info">
+                  <p>CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG</p>
+                  <p>Telephone: 01632 960809</p>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
